# streamlit_pydantic

./: Makefile  README.md  generator.py  home.py  pyproject.toml  requirements.txt
examples/: 1_🏠_Home.py
examples/pages/: 2_🙂_Simple.py  3_🧩_Complex.py
src/: __init__.py  generator.py  inputs.py  schemas.py  utils.py
