[tool.poetry]
name = "src"
description = "Pydantic Streamlit Form Generator"
version = "0.0.1"
authors = ["vargaon <varga.ondra@seznam.cz>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
pydantic = "^2.4.2"
pydantic_extra_types = "^2.1.0"
streamlit = "^1.28.1"
streamlit-extras = "^0.3.5"
streamlit-nested-layout = "^0.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
